<resources>
    <string name="app_name">module_home</string>
    <string name="update_status">正在更新连接状态，请稍后</string>
    <string name="connect_tip">请尽量使您的设备靠近路由器，并确保网络环境良好</string>
    <string name="home_empty_device_str">暂无设备信息，请绑定设备</string>
    <string name="string_empty_pet_data">暂无宠物信息，请添加宠物</string>
    <string name="string_select_device_basin">当前设备：梦视智能宠物猫砂盆</string>
    <string name="string_select_device_feeder">当前设备：梦视智能宠物喂食器</string>
    <string name="string_select_device">请选择设备以便获得更多功能</string>
    <string name="string_basin_tip">设备即将上线，敬请期待</string>
    <string name="age">年龄</string>
    <string name="weight">体重</string>
    <string name="normal">正常</string>
    <string name="status">状态</string>
    <string name="string_switch">点击切换</string>
    <string name="string_select_device_title">选择设备</string>
    <string name="string_show_more_device_tip">即将支持更多设备，敬请期待～</string>
    <string name="string_tools_text">我的工具</string>
    <string name="string_delete_pet_tip">确认删除该宠物信息?</string>
    <string name="string_pet_manager">宠物管理</string>
    <string name="string_wifi_connected">AP模式连接WiFi</string>
    <string name="string_choose">去选择</string>
    <string name="string_wifi_toast_1">请输入WIFI名</string>
    <string name="string_wifi_toast_2">密码不能小于8位</string>
    <string name="string_wifi_toast_3">发送WiFi信息成功</string>
    <string name="string_wifi_tip_1">1、喂食器开机后连接名为MSPET的网络,初始密码12345678</string>
    <string name="string_wifi_tip_2">去连接MSPET</string>
    <string name="string_wifi_tip_3">2、右上角选择WiFi或在下面输入喂食器想要连接的WiFi名、密码和认证模式（请确保输入正确再继续下一步）</string>
    <string name="string_wifi_tip_4">3、全部输入完成后点击下方的发送WiFi信息，等待5秒左右设备会自动重启</string>
    <string name="string_wifi_tip_5">4、设备重启时，喂食器会发出咔咔咔的声音，重启后等待10秒左右，如果WiFi指示灯常亮则表示WiFi连接成功，如果指示灯常暗则表示WiFi连接失败，请长按WiFi指示灯下的按钮10秒左右，然后设备自动重启，重启以后重复上述步骤</string>
    <string name="string_wifi_name">WiFi名</string>
    <string name="string_wifi_input_hint">请输入WiFi名称</string>
    <string name="string_wifi_password">WiFi密码</string>
    <string name="string_wifi_password_hint">请输入WiFi密码</string>
    <string name="string_wifi_type">WIFI认证模式</string>
    <string name="string_wifi_send">发送WiFi信息</string>
    <string name="string_connect_wifi">选择WIFI</string>
    <string name="string_wifi_loading_1">正在获取wifi</string>
    <string name="string_permission_failed">权限获取失败</string>
    <string name="string_scan">扫描</string>
    <string name="string_device_manager">设备管理</string>
    <string name="string_device_bind">设备绑定</string>
    <string name="string_device_permissions">设备权限</string>
    <string name="string_my_apply">我的申请</string>
    <string name="string_empty_device">暂无可管理的设备</string>
    <string name="string_empty_apply">暂无申请信息</string>
    <string name="string_device_binding">设备绑定中...</string>
    <string name="string_apply_success">申请成功</string>
    <string name="string_apply">申请</string>
    <string name="string_no_bind">当前要绑定的设备暂无主用户，确认绑定之后，您自动成为主用户，是否确认绑定？</string>
    <string name="string_has_bind">当前要绑定的设备已存在主用户，需要向主用户申请，是否确定申请绑定？</string>
    <string name="string_empty_device_text">暂无设备信息，请绑定设备</string>
    <string name="string_only_bind_one">暂时只支持绑定一台设备，如若更换绑定设备，请先解绑</string>
    <string name="string_device_num">请输入设备号</string>
    <string name="string_unbind_device">解绑</string>
    <string name="string_checking">审核中</string>
    <string name="string_passed">已通过</string>
    <string name="string_refuse">已拒绝</string>
    <string name="string_apply_user">申请用户:%s</string>
    <string name="string_apply_device">申请设备:%s</string>
    <string name="string_apply_time">申请时间:%s</string>
    <string name="string_passed_or_refused">已通过/已拒绝</string>
    <string name="string_pass_text">通过</string>
    <string name="string_refuse_text">拒绝</string>
    <string name="string_health_text">健康统计</string>
    <string name="string_feed_times_text">出粮频率(次)</string>
    <string name="string_feed_g_text">出粮克数(克)</string>
    <string name="string_remind_g_text">剩余克数(克)</string>
    <string name="string_daily_care">日常护理</string>
    <string name="string_empty_data">获取到的数据为空</string>
    <string name="net_error">接口请求失败，请重试</string>
    <string name="empty_data">暂无数据</string>
    <string name="toast_delete_success">删除成功</string>
    <string name="string_add_item">新增%s</string>
    <string name="string_time_choose_tip">当请重前选择是未来时间，新设置完成时间</string>
    <string name="string_desc">请输入说明</string>
    <string name="string_toast_time">请输入完成时间</string>
    <string name="string_add_success">添加成功</string>
    <string name="string_completed_time">请选择完成时间</string>
    <string name="string_text_complete_time">完成时间</string>
    <string name="string_hint_input">请输入说明，最多输入300字</string>
</resources>


