<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/module_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/desc_input"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="12dp"
            android:background="@drawable/sdk_white_card_bg"
            android:gravity="top"
            android:hint="@string/string_hint_input"
            android:padding="12dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="13sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/sdk_white_card_bg"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/string_text_complete_time"
                android:textColor="#333333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/time_picker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/home_icon_arrow_right"
                android:drawablePadding="6dp"
                android:gravity="right|center_vertical"
                android:hint="@string/string_completed_time"
                android:textColor="#333333"
                android:includeFontPadding="false"
                android:textColorHint="#999999" />

        </RelativeLayout>

    </LinearLayout>

    <com.punuo.sys.sdk.view.AdvancedTextView
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="12dp"
        android:background="#ff1940"
        android:gravity="center"
        android:text="@string/string_submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:border_radius="22dp" />
</LinearLayout>