<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:background="@drawable/home_white_card_bg"
    android:layout_marginTop="10dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textColor="#333333"
            android:textSize="13sp"
            tools:text="用户名" />

        <TextView
            android:id="@+id/dev_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:includeFontPadding="false"
            android:textColor="#666666"
            android:textSize="13sp"
            tools:text="设备id" />

        <TextView
            android:id="@+id/apply_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:includeFontPadding="false"
            android:textColor="#999999"
            android:textSize="12sp"
            tools:text="申请时间" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/device_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/string_passed_or_refused"
            android:textColor="#666666"
            android:textSize="12sp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/device_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/home_unbind_bg"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:text="@string/string_pass_text"
            android:textColor="#FF1A1A"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/device_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/home_unbind_bg"
            android:gravity="center"
            android:layout_marginLeft="6dp"
            android:includeFontPadding="false"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:text="@string/string_refuse_text"
            android:textColor="#FF1A1A"
            android:textSize="12sp" />
    </LinearLayout>



</LinearLayout>