<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/module_title_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/home_white_card_bg"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_feed_times_text"
                        android:textColor="#333333"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/filter_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:entries="@array/home_spinner" />
                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/chart_container_1"
                    android:layout_width="match_parent"
                    android:layout_height="145dp"
                    android:orientation="vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/home_white_card_bg"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/string_feed_g_text"
                        android:textColor="#333333"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/filter_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:entries="@array/home_spinner" />
                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/chart_container_2"
                    android:layout_width="match_parent"
                    android:layout_height="145dp"
                    android:orientation="vertical" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/home_white_card_bg"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/string_remind_g_text"
                        android:textColor="#333333"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/filter_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:entries="@array/home_spinner" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/chart_container_3"
                    android:layout_width="match_parent"
                    android:layout_height="145dp"
                    android:orientation="vertical" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>